--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,5 @@
 @import './base.css';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 #app {
   max-width: 1700px;
@@ -11,12 +12,13 @@
 
 body{
   background: #FFFEF4;
+  font-family: "Montserrat", sans-serif;
 }
 
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: #7E2513;
   transition: 0.4s;
   padding: 3px;
 }
