--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,5 @@
-@import './base.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-#app {
-  max-width: 1700px;
-}
 *,
 *::before,
 *::after{
@@ -21,6 +17,10 @@ a,
   color: #7E2513;
   transition: 0.4s;
   padding: 3px;
+}
+.content {
+  max-width: 1470px;
+  margin: 0 auto;
 }
 
 /* @media (hover: hover) {
