--- a/diploma-front/src/assets/main.scss
+++ b/diploma-front/src/assets/main.scss
@@ -21,8 +21,10 @@ a,
 .content {
   max-width: 1470px;
   margin: 0 auto;
+  @media (max-width: 992px) {
+    margin: 0 2rem;
+  }
 }
-
 /* @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
